docker/bert-as-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bert-as-service
spec:
  type: NodePort
  selector:
    app: Bert
  ports:
    - name: inbound
      protocol: TCP
      port: 8125
      targetPort: 8125
